2003-06-17  Michael Checky  <Michael_Checky@ThermoKing.com>
  
        * src/mibgroup/mibII/helpers.c: Changed the definition of
	ifnet_addrs to an extern declaration because of multiple symbol
	definition errors when using a compiler that does not merge them.
 
2003-02-28  Andrew Lunn  <andrew.lunn@ascom.ch>

        * include/mibgroup/mibII/itf_helpers.h:
	* src/mibgroup/mibII/helpers.c: (New) Functions for finding the
	interface structure for Free and open BSD.
	* src/mibgroup/mibII/interfaces.c: Use the helper functions and
	other changes needed for the FreeBSD stack.
	* src/mibgroup/mibII/ip.c: Ditto
	* src/mibgroup/mibII/udp.c: Ditto
	* src/mibgroup/mibII/tcp.c: Ditto
	* src/mibgroup/mibII/dot3.c: Ditto
	* cdl/snmpagent.cdl: Removed the requirement for the OpenBSD stack.
	* doc/snmp.sgml: Removed the documented requirement for the OpenBSD
	stack.
	
2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/snmpagent.cdl: Add doc link.

	* doc/prepare-manpages.sh: Generate namespaced IDs, without shouting.
	* doc/snmp-manpages.sgml: Regenerated.

2003-02-14  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/snmpagent.cdl: Explicitly require OpenBSD stack since we don't
	work with the FreeBSD stack yet.

	* doc/snmp.sgml: Document configuring packages better, and only use
	of OpenBSD stack.

2003-02-05  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/snmp.sgml: Fix a doc build failure, and tweak some duff links and
	a few typos.

2003-02-03  Andrew Lunn <andrew.lunn@ascom.ch>

        * doc/prepare-manpages.sh: New file. Convert from man to sgml.
        * doc/manpages/snmpd.conf.5: New file: Manual page for snmpd.conf.
        * doc/snmp-manpages.sgml: New file. The converted man page
        * doc/snmp.sgml: Updated documentation which includes the man page.

2003-02-03  Manu Sharma <manu.sharma@ascom.com>

        * cdl/snmpagent.cdl,
        * include/mib_module_config.h,
        * include/mib_module_dot_conf.h,
        * include/mib_module_inits.h,